--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,10 @@ variables:
   testProject: 'CodecovCsharpAzurePipelines.Tests'
 
 steps:
+- task: NuGetToolInstaller@1
+  inputs:
+    versionSpec: '>=5.8'
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
