Yaml: Quotes around test-path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,8 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'test'
-    arguments: 'dotnet test ./test/$(testProject)/$(testProject).csproj -c Debug --logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
+    arguments: 'dotnet test "./test/$(testProject)/$(testProject).csproj" -c Debug /p:CollectCoverage=true /p:CoverletOutputFormat=opencover'
+    publishTestResults: false
   displayName: '.NET Test'
 
 - script: |
