--- a/test/CodecovCsharpAzurePipelines.Tests/CodecovCsharpAzurePipelines.Tests.csproj
+++ b/test/CodecovCsharpAzurePipelines.Tests/CodecovCsharpAzurePipelines.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Codecov" Version="1.13.0" />
+    <PackageReference Include="Codecov" Version="1.10.0" />
     <PackageReference Include="coverlet.msbuild" Version="3.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
