--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: "ubuntu-latest"
 
 variables:
-  codecovVersion: "1.12.4"
+  Include: '/p:Include="[NRK]*,[CodecovCsharpAzurePipelines]*"'
   testProject: "CodecovCsharpAzurePipelines.Tests"
 
 steps:
@@ -28,6 +28,6 @@ steps:
   - task: DotNetCoreCLI@2
     inputs:
       command: "test"
-      arguments: './test/$(testProject)/$(testProject).csproj -c Debug --logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Include=\\"[NRK]*,[CodecovCsharpAzurePipelines]*\\"'
+      arguments: './test/$(testProject)/$(testProject).csproj -c Debug --logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:Include=$(Include)'
       publishTestResults: false
     displayName: ".NET Test"
